<resources>
    <string name="app_name">DenizGencaySpaceXFan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">EXPLORE</string>
    <string name="height">HEIGHT</string>
    <string name="diameter">DIAMETER</string>
    <string name="mass">MASS</string>
    <string name="payload_to_leo">PAYLOAD TO LEO</string>
    <string name="payload_to_gto">PAYLOAD TO GTO</string>
    <string name="payload_to_mars">PAYLOAD TO MARS</string>
    <string name="sign_in_text">Login</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="date">DATE</string>
    <string name="flight_number">FLIGHT NUMBER</string>
</resources>