<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.signin.SignInFragment">

    <EditText
        android:id="@+id/fragment_sign_in_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="25dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/fragment_sign_in_password_text"
        android:layout_below="@id/fragment_sign_in_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:password="true"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_marginTop="25dp"
        android:layout_below="@id/fragment_sign_in_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/sign_in_text"/>

    <TextView
        android:id="@+id/sign_in_fragment_sign_up_button"
        android:layout_below="@id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/sign_up_text"/>


</RelativeLayout>