<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rockets.detail.RocketDetailFragment">

   <ImageView
       android:id="@+id/rocket_detail_fragment_image"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:layout_centerHorizontal="true"
       android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/rocket_detail_fragment_description_text"
        android:layout_below="@id/rocket_detail_fragment_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="klasdkklasdkklasdkklasdkklasdkklasdkklasdkklasdkklasdkalşsdfkalşsfdaksldalşksdlşaklşsdkşlaskldşaklşskdlkslşlşsdlşaksldşaklşsdkladşaksdşlaksdlşkaslk"/>

    <RelativeLayout
        android:id="@+id/height_layout"
        android:layout_below="@id/rocket_detail_fragment_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diameter_layout"
        android:layout_below="@id/height_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diameter"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_diameter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mass_layout"
        android:layout_below="@id/diameter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_mass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payload_to_leo_layout"
        android:layout_below="@id/mass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_leo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload_to_leo"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_leo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payload_to_gto_layout"
        android:layout_below="@id/payload_to_leo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_gto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload_to_gto"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_gto_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payload_to_mars_layout"
        android:layout_below="@id/payload_to_gto_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_mars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload_to_mars"/>
        <TextView
            android:id="@+id/rocket_detail_fragment_payload_to_mars_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="asdasd"/>

    </RelativeLayout>


</RelativeLayout>