<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upcoming.detail.UpcomingDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/fragment_upcoming_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/upcoming_detail_fragment_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="55dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/upcoming_detail_fragment_description_text"
            android:layout_below="@id/upcoming_detail_fragment_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/white"
            />

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_below="@id/upcoming_detail_fragment_description_text"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upcoming_detail_fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/upcoming_detail_fragment_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/date_layout"
            android:layout_below="@id/name_layout"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upcoming_detail_fragment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/upcoming_detail_fragment_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/date_layout"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upcoming_detail_fragment_flight_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/flight_number"/>
            <TextView
                android:id="@+id/upcoming_detail_fragment_flight_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>